--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-  <div class="social-media-banner overflow overflow-orange" style="height:300px">
+  <div class="social-media-banner overflow overflow-orange" style="height:250px; width:1200px;margin:0 auto;text-align:center;padding-top:100px" >
     <a href="facebook"><img src="/images/social-media-icons/facebook-256.png" height="128px" width="128px"></a>
     <a href=""><img src="/images/social-media-icons/googleplus-256.png" height="128px" width="128px"></a>
     <a href=""><img src="/images/social-media-icons/github-256.png" height="128px" width="128px"></a>
@@ -64,7 +64,7 @@
         </span>
       </span> #}
     </div>
-    <div class="social-media">
+    <div class="social-media" style="display:none">
       <a href="https://www.facebook.com/pages/Khan-Academie/123650984422563"><img src="/images/WDD_Buddycon_Icons/PNG/circular/facebook_32.png"></a>
       <a href="https://twitter.com/KhanAcademie"><img src="/images/WDD_Buddycon_Icons/PNG/circular/twitter_32.png"></a>
       <a href="http://www.youtube.com/PerceptumNL"><img src="/images/WDD_Buddycon_Icons/PNG/circular/youtube_32.png"></a>
