--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -107,9 +107,9 @@
                 <!-- <iframe width="560" height="315" src="http://www.youtube.com/embed/tC80BNOKJtk" frameborder="0" allowfullscreen></iframe> -->
                 <iframe width="320" height="180" src="http://www.youtube.com/embed/tC80BNOKJtk?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
             </div>
-            <div class='open-source-blurb' style="display: inline-block; width:40%">
-              <h4>Khan Academie open source</h4>
-              <p>De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
+            <div class='open-source-blurb' style="display: inline-block; width:40%; background:white">
+              <h4 style="color:orange">Khan Academie open source</h4>
+              <p style="color:black">De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
                 Wij willen graag dat deze Nederlandse Khan Academie groeit met behulp van een community van programmeurs en leraren.
                 Hierdoor kan de Khan Academie gratis bkijven voortbestaan en wordt deze eigendom en ontwikkeled volgens de visie 
                 van de onderwijs community.</p>
@@ -117,27 +117,18 @@
             </div>
         </div>
         <div class="sites-blurb overflow-white" style="background: white; padding: 30px;">
-          <div class="zoek-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;"><h4>Ga naar de video zoekmachine</h4></div>
-          <div class="wiki-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;"><h4>Denk mee over oefeningen op de wiki</h4></div>
+          <div class="zoek-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;">
+            <h6>
+                <img src="/images/icons/iconmonstr-video-icon.png" height="32px" width="32px">Ga naar de video zoekmachine
+            </h6>
+          </div>
+          <div class="wiki-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;">
+            <h6>
+                <img src="/images/icons/iconmonstr-livejournal-icon.png" height="32px" width="32px">Denk mee over oefeningen op de wiki
+            </h6>
+          </div>
         </div>
     </div>
-    {# MOVE TO ACTUAL FOOTER #}
-{#     <div>
-        <div class="mini-footer">
-            <div class="mini-footer-link">
-                Help Mee
-            </div>
-            <div class="mini-footer-link">
-                Handleiding
-            </div>
-            <div class="mini-footer-link">
-                Blog
-            </div>
-            <div class="mini-footer-link">
-                Wiki
-            </div>
-        </div>
-    </div>     #}
     </article>
 
 
