footer/homepage changes

--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -29,7 +29,7 @@
                     <a href="/browse">
                     <div id="kijk">
                     {# <img src="images/icons/iconmonstr-video-icon.png" width='128px' height='128px'> #}
-                    <img src="images/icons/Oefen.png" width='230px' height='192px'>
+                    <img src="/images/icons/Oefen.png" width='230px' height='192px'>
                     <h3>Oefen</h3>
                     <p>Maak oefeningen en bekijk hulpvideo's.</p>
                     </div>
@@ -39,7 +39,7 @@
                     <a href="/browse">
                     <div id="leer">
                     {# <img src="images/icons/iconmonstr-livejournal-icon.png" width='128px' height='128px'> #}
-                    <img src="images/icons/Herhaal.png" width='230px' height='192px'>
+                    <img src="/images/icons/Herhaal.png" width='230px' height='192px'>
                     <h3>Herhaal</h3>
                     <p>Oefen totdat je het onder die knie hebt.</p>
                     </div>
@@ -49,7 +49,7 @@
                     <a href="/browse">
                     <div id="groei">
                     {# <img src="images/icons/iconmonstr-star-5-icon.png" width='128px' height='128px'> #}
-                    <img src="images/icons/Groei.png" width='230px' height='192px'>
+                    <img src="/images/icons/Groei.png" width='230px' height='192px'>
                     <h3>Groei</h3>
                     <p>Zie je voortgang en verdien punten.</p>
                     </div>
@@ -63,25 +63,25 @@
                 <div class="focus-box">
                     <div id="kijk">
                     {# <img src="images/icons/iconmonstr-video-icon.png" width='128px' height='128px'> #}
-                    <img src="images/icons/Oefen.png" width='230px' height='192px'>
+                    <img src="/images/icons/volg.png" width='230px' height='192px'>
                     <h3>Volg</h3>
-                    <p>Maak oefeningen en bekijk hulpvideo's.</p>
+                    <p>Volg wat je leerlingen doen en zie hoever ze komen</p>
                     </div>
                 </div>
                 <div class="focus-box">
                     <div id="leer">
                     {# <img src="images/icons/iconmonstr-livejournal-icon.png" width='128px' height='128px'> #}
-                    <img src="images/icons/Herhaal.png" width='230px' height='192px'>
+                    <img src="/images/icons/leer.png" width='230px' height='192px'>
                     <h3>Leer</h3>
-                    <p>Oefen totdat je het onder die knie hebt.</p>
+                    <p>Leer van de statistieken waar leerlingen moeite mee hebben</p>
                     </div>
                 </div>
                 <div class="focus-box">
                     <div id="groei">
                     {# <img src="images/icons/iconmonstr-star-5-icon.png" width='128px' height='128px'> #}
-                    <img src="images/icons/Groei.png" width='230px' height='192px'>
+                    <img src="/images/icons/Groei.png" width='230px' height='192px'>
                     <h3>Verrijk</h3>
-                    <p>Zie je voortgang en verdien punten.</p>
+                    <p>Geef meer aandacht aan  probleem gebieden en help je leerlingen om te groeien</p>
                     </div>
                 </div>
                 <!-- end teachers icons stuff -->
@@ -105,11 +105,11 @@
             <div class="homepage-video" style="display: inline-block; width:59%">
                 <!-- <iframe src=""></iframe> -->
                 <!-- <iframe width="560" height="315" src="http://www.youtube.com/embed/tC80BNOKJtk" frameborder="0" allowfullscreen></iframe> -->
-                <iframe width="320" height="180" src="http://www.youtube.com/embed/tC80BNOKJtk?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
+                <iframe width="480" height="270" src="http://www.youtube.com/embed/tC80BNOKJtk?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class='open-source-blurb' style="display: inline-block; width:40%; background:white">
-              <h4 style="color:orange">Khan Academie open source</h4>
-              <p style="color:black">De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
+              <h4 style="color:orange; font-family:Raleway">Khan Academie open source</h4>
+              <p style="color:black; font-family:Raleway">De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
                 Wij willen graag dat deze Nederlandse Khan Academie groeit met behulp van een community van programmeurs en leraren.
                 Hierdoor kan de Khan Academie gratis bkijven voortbestaan en wordt deze eigendom en ontwikkeled volgens de visie 
                 van de onderwijs community.</p>
