--- a/stylesheets/shared-package/default.css
+++ b/stylesheets/shared-package/default.css
@@ -419,11 +419,13 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 }
 
 .wiki-blurb h6 {
-    font-size: 1.8em;
+    font-family: "Raleway", sans-serif;
+    font-size: 0.8em;
 }
 
 .zoek-blurb h6 {
-    font-size: 1.8em;
+    font-family: "Raleway", sans-serif;
+    font-size: 0.8em;
 }
 
 /*NEW FOOTER STUFF*/
