new teacher icons

--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -118,13 +118,15 @@
         </div>
         <div class="sites-blurb overflow-white" style="background: white; padding: 30px;">
           <div class="zoek-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;">
+            <img src="/images/icons/iconmonstr-video-icon.png" height="32px" width="32px">
             <h6>
-                <img src="/images/icons/iconmonstr-video-icon.png" height="32px" width="32px">Ga naar de video zoekmachine
+                Ga naar de video zoekmachine
             </h6>
           </div>
           <div class="wiki-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;">
+            <img src="/images/icons/iconmonstr-livejournal-icon.png" height="32px" width="32px">
             <h6>
-                <img src="/images/icons/iconmonstr-livejournal-icon.png" height="32px" width="32px">Denk mee over oefeningen op de wiki
+                Denk mee over oefeningen op de wiki
             </h6>
           </div>
         </div>
