--- a/stylesheets/homepage-package/homepage.css
+++ b/stylesheets/homepage-package/homepage.css
@@ -214,7 +214,7 @@ td.social-action.gplus {
     /*border: 10px transparent;*/
     /*border-radius: 10px;*/
     display: inline-block;
-    width: 33%;
+    /*width: 33%;*/
     text-align: center;
 }
 #focus2 {
@@ -226,7 +226,7 @@ td.social-action.gplus {
     /*border: 10px transparent;*/
     /*border-radius: 10px;*/
     display: inline-block;
-    width: 33%;
+    /*width: 33%;*/
     text-align: center;
 }
 #focus3 {
@@ -238,7 +238,7 @@ td.social-action.gplus {
     /*border: 10px transparent;*/
     /*border-radius: 10px;*/
     display: inline-block;
-    width: 33%;
+    /*width: 33%;*/
     text-align: center;
 }
 
@@ -250,14 +250,19 @@ td.social-action.gplus {
     /*margin: 10px;*/
     /*border: 10px transparent;*/
     /*border-radius: 10px;*/
-    display: inline-block;
-    width: 33%;
+    /*display: inline-block;*/
+    /*width: 33%;*/
+    width: 350px;
+    height: 350px;
     text-align: center;
     vertical-align: bottom;
     /*height: 400px;*/
     display: table-cell;
 }
 
+#slideshow {
+    padding-bottom: 100px;
+}
 #homepage-content {
     /*border-bottom: 2px white solid*/
 }
@@ -282,7 +287,9 @@ td.social-action.gplus {
     border-radius: 10px;
     background-color: #0776a0;
     vertical-align: bottom;
+    width: 325px;
 }
+
 #leer {
     display: table-cell;
     padding: 10px;
@@ -290,6 +297,7 @@ td.social-action.gplus {
     border-radius: 10px;
     background-color: #3aa6d0;
     vertical-align: bottom;
+    width: 325px;
 }
 #groei {
     display: table-cell;
@@ -298,6 +306,7 @@ td.social-action.gplus {
     border-radius: 10px;
     background-color: #83cce2;
     vertical-align: bottom;
+    width: 325px;
 }
 
 .mini-footer {
@@ -322,8 +331,8 @@ td.social-action.gplus {
     margin-left: -200px;
     padding-right: 200px;
     padding-left: 200px;*/
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     background-color: white;
     /*background-color: gray;*/
     text-align: center;
@@ -332,6 +341,7 @@ td.social-action.gplus {
     color: gray;
     font-family: "Satisfy", cursive;
     font-size: 2.0em;
+    line-height: 60px;
 
 }
 
@@ -340,7 +350,17 @@ img {
 }
 
 
+.wikizoek-blurb h6 {
+    font-family: "Raleway", sans-serif;
+    font-size: 0.8em;
+    display: inline-block;
+}
 
+.wikizoek-blurb img {
+    position: relative;
+    top: 8px;
+    right: 4px;
+}
 /*#homepage {
     margin-right: -100px;
     margin-left: -100px;
