--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -11,13 +11,29 @@
 <link href='http://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
 <link href='https://s3.amazonaws.com/gallery-css/gallery.css' rel='stylesheet' type='text/css'>
 <link href='https://s3.amazonaws.com/gallery-css/gallery.theme.css' rel='stylesheet' type='text/css'>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#slideshow > div:gt(0)').hide();
+        setInterval(function () {
+            $('#slideshow > div:first')
+                .fadeOut(1000)
+                .delay(1000)
+                .next()
+                .delay(1000)
+                .fadeIn(1000)
+                .end()
+                .appendTo('#slideshow');
+
+        }, 5000);
+    });
+</script>
 {% endblock pagescript %}
 {% block pagetitle %}{% endblock pagetitle %}
 {% block pagecontent %}
     <article id="homepage" > {# class="overflow" #}
     <div id="homepage-content" > {# class="container" #}
         <!-- gallery stuff -->
-        <div class="gallery autoplay items-2" style="background:#d3e8f2">
+        <div class="gallery autoplay items-2" style="background:#d3e8f2; display:none">
           <div id="item-1" class="control-operator"></div>
           <div id="item-2" class="control-operator"></div>
           <!-- <div id="item-3" class="control-operator"></div> -->
@@ -61,28 +77,34 @@
             <!-- <h1>2</h1> -->
             <!-- teachers icons stuff -->
                 <div class="focus-box">
+                  <a href="/browse">
                     <div id="kijk">
                     {# <img src="images/icons/iconmonstr-video-icon.png" width='128px' height='128px'> #}
                     <img src="/images/icons/volg.png" width='230px' height='192px'>
                     <h3>Volg</h3>
                     <p>Volg wat je leerlingen doen en zie hoever ze komen</p>
                     </div>
+                  </a>
                 </div>
                 <div class="focus-box">
+                  <a href="/browse">
                     <div id="leer">
                     {# <img src="images/icons/iconmonstr-livejournal-icon.png" width='128px' height='128px'> #}
                     <img src="/images/icons/leer.png" width='230px' height='192px'>
                     <h3>Leer</h3>
                     <p>Leer van de statistieken waar leerlingen moeite mee hebben</p>
                     </div>
+                  </a>
                 </div>
                 <div class="focus-box">
+                  <a href="/browse">
                     <div id="groei">
                     {# <img src="images/icons/iconmonstr-star-5-icon.png" width='128px' height='128px'> #}
                     <img src="/images/icons/Groei.png" width='230px' height='192px'>
                     <h3>Verrijk</h3>
                     <p>Geef meer aandacht aan  probleem gebieden en help je leerlingen om te groeien</p>
                     </div>
+                  </a>
                 </div>
                 <!-- end teachers icons stuff -->
           </figure>
@@ -97,11 +119,85 @@
           </div>
         </div>
         <!-- end gallery stuff -->
+        <!-- Use jQuery instead og gallery-css -->
+        <div id="slideshow">
+            <div class="" style="background:#d3e8f2">
+            <!-- <h1>1</h1> -->
+                <!-- student icons stuff -->
+                <div class="focus-box">
+                    <a href="/browse">
+                    <div id="kijk">
+                    {# <img src="images/icons/iconmonstr-video-icon.png" width='128px' height='128px'> #}
+                    <img src="/images/icons/Oefen.png" width='230px' height='192px'>
+                    <h3>Oefen</h3>
+                    <p>Maak oefeningen en bekijk hulpvideo's.</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="focus-box">
+                    <a href="/browse">
+                    <div id="leer">
+                    {# <img src="images/icons/iconmonstr-livejournal-icon.png" width='128px' height='128px'> #}
+                    <img src="/images/icons/Herhaal.png" width='230px' height='192px'>
+                    <h3>Herhaal</h3>
+                    <p>Oefen totdat je het onder die knie hebt.</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="focus-box">
+                    <a href="/browse">
+                    <div id="groei">
+                    {# <img src="images/icons/iconmonstr-star-5-icon.png" width='128px' height='128px'> #}
+                    <img src="/images/icons/Groei.png" width='230px' height='192px'>
+                    <h3>Groei</h3>
+                    <p>Zie je voortgang en verdien punten.</p>
+                    </div>
+                    </a>
+                </div>
+                <!-- end student icons stuff -->
+          </div>
+          <div class="" style="background:#d3e8f2">
+            <!-- <h1>2</h1> -->
+            <!-- teachers icons stuff -->
+                <div class="focus-box">
+                    <a href="/browse">
+                    <div id="kijk">
+                    {# <img src="images/icons/iconmonstr-video-icon.png" width='128px' height='128px'> #}
+                    <img src="/images/icons/volg.png" width='230px' height='192px'>
+                    <h3>Volg</h3>
+                    <p>Volg wat je leerlingen doen en zie hoever ze komen</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="focus-box">
+                    <a href="/browse">
+                    <div id="leer">
+                    {# <img src="images/icons/iconmonstr-livejournal-icon.png" width='128px' height='128px'> #}
+                    <img src="/images/icons/leer.png" width='230px' height='192px'>
+                    <h3>Leer</h3>
+                    <p>Leer van de statistieken waar leerlingen moeite mee hebben</p>
+                    </div>
+                    </a>
+                </div>
+                <div class="focus-box">
+                    <a href="/browse">
+                    <div id="groei">
+                    {# <img src="images/icons/iconmonstr-star-5-icon.png" width='128px' height='128px'> #}
+                    <img src="/images/icons/Groei.png" width='230px' height='192px'>
+                    <h3>Verrijk</h3>
+                    <p>Geef meer aandacht aan  probleem gebieden en help je leerlingen om te groeien</p>
+                    </div>
+                    </a>
+                </div>
+                <!-- end teachers icons stuff -->
+          </div> 
+        </div>
+        <!-- end Use jQuery instead og gallery-css -->
 
         <div class='homepage-sell overflow-white'> {# class="overflow" #}
-            Het digitale oefenboek, speciaal geschreven voor jou.
+            Het digitale oefenboekje, speciaal geschreven voor jou.
         </div>
-        <div class='homepage-video-blurb' style="padding: 30px;">
+        <div class='homepage-video-blurb' style="padding: 60px 30px;">
             <div class="homepage-video" style="display: inline-block; width:59%">
                 <!-- <iframe src=""></iframe> -->
                 <!-- <iframe width="560" height="315" src="http://www.youtube.com/embed/tC80BNOKJtk" frameborder="0" allowfullscreen></iframe> -->
@@ -117,13 +213,13 @@
             </div>
         </div>
         <div class="sites-blurb overflow-white" style="background: white; padding: 30px;">
-          <div class="zoek-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;">
+          <div class="wikizoek-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;">
             <img src="/images/icons/iconmonstr-video-icon.png" height="32px" width="32px">
             <h6>
                 Ga naar de video zoekmachine
             </h6>
           </div>
-          <div class="wiki-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;">
+          <div class="wikizoek-blurb" style="display: inline-block; width: 49%; text-align: center; font-size: 1.5em; text-transform: uppercase;">
             <img src="/images/icons/iconmonstr-livejournal-icon.png" height="32px" width="32px">
             <h6>
                 Denk mee over oefeningen op de wiki
