--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -198,18 +198,18 @@
             Het digitale oefenboekje, speciaal geschreven voor jou.
         </div>
         <div class='homepage-video-blurb' style="padding: 60px 30px;">
-            <div class="homepage-video" style="display: inline-block; width:59%">
+            <div class="homepage-video" style="display: inline-block; width:490px">
                 <!-- <iframe src=""></iframe> -->
                 <!-- <iframe width="560" height="315" src="http://www.youtube.com/embed/tC80BNOKJtk" frameborder="0" allowfullscreen></iframe> -->
                 <iframe width="480" height="270" src="http://www.youtube.com/embed/tC80BNOKJtk?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
             </div>
-            <div class='open-source-blurb' style="display: inline-block; width:40%; background:white">
-              <h4 style="color:orange; font-family:Raleway">Khan Academie open source</h4>
+            <div class='open-source-blurb' style="display: inline-block; width:480px; background:white">
+              <h4 style="color:orange; font-family:Raleway">Khan Academie <strong>open source</strong></h4>
               <p style="color:black; font-family:Raleway">De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
                 Wij willen graag dat deze Nederlandse Khan Academie groeit met behulp van een community van programmeurs en leraren.
                 Hierdoor kan de Khan Academie gratis bkijven voortbestaan en wordt deze eigendom en ontwikkeled volgens de visie 
                 van de onderwijs community.</p>
-                <a href="https://github.com/PerceptumNL/KhanLatest">U kunt de code vinden in GitHub</a>
+                <a href="https://github.com/PerceptumNL/KhanLatest">U kunt de code vinden in <strong>GitHub</strong></a>
             </div>
         </div>
         <div class="sites-blurb overflow-white" style="background: white; padding: 30px;">
