--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -205,7 +205,7 @@
             </div>
             <div class='open-source-blurb' style="display: inline-block; width:480px; background:white">
               <h4 style="color:orange; font-family:Raleway">Khan Academie <strong>open source</strong></h4>
-              <p style="color:black; font-family:Raleway">De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
+              <p style="color:black; font-family:Raleway; letter-spacing: 1.2px">De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
                 Wij willen graag dat deze Nederlandse Khan Academie groeit met behulp van een community van programmeurs en leraren.
                 Hierdoor kan de Khan Academie gratis bkijven voortbestaan en wordt deze eigendom en ontwikkeled volgens de visie 
                 van de onderwijs community.</p>
