--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -194,18 +194,18 @@
         </div>
         <!-- end Use jQuery instead og gallery-css -->
 
-        <div class='homepage-sell overflow-white'> {# class="overflow" #}
+        <div class='homepage-sell overflow-white' style="font-size: 3em"> {# class="overflow" #}
             Het digitale oefenboekje, speciaal geschreven voor jou.
         </div>
-        <div class='homepage-video-blurb' style="padding: 60px 30px;">
-            <div class="homepage-video" style="display: inline-block; width:490px">
+        <div class='homepage-video-blurb' style="padding: 60px 0px;">
+            <div class="homepage-video" style="display: inline-block; width:600px; margin-right: 40px">
                 <!-- <iframe src=""></iframe> -->
                 <!-- <iframe width="560" height="315" src="http://www.youtube.com/embed/tC80BNOKJtk" frameborder="0" allowfullscreen></iframe> -->
-                <iframe width="480" height="270" src="http://www.youtube.com/embed/tC80BNOKJtk?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
+                <iframe width="600" height="360" src="http://www.youtube.com/embed/tC80BNOKJtk?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
             </div>
-            <div class='open-source-blurb' style="display: inline-block; width:480px; background:white">
-              <h4 style="color:orange; font-family:Raleway">Khan Academie <strong>open source</strong></h4>
-              <p style="color:black; font-family:Raleway; letter-spacing: 1.2px">De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
+            <div class='open-source-blurb' style="display: inline-block; background:white; width: 395px;">
+              <h4 style="color:orange; font-family:Ralewayl font-size: 1.4em">Khan Academie <strong>open source</strong></h4>
+              <p style="color:black; font-family:Raleway; letter-spacing: 1.2px; font-size: 0.8em">De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
                 Wij willen graag dat deze Nederlandse Khan Academie groeit met behulp van een community van programmeurs en leraren.
                 Hierdoor kan de Khan Academie gratis bkijven voortbestaan en wordt deze eigendom en ontwikkeled volgens de visie 
                 van de onderwijs community.</p>
