made footer pages instead of google docs

--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -30,96 +30,8 @@
 {% endblock pagescript %}
 {% block pagetitle %}{% endblock pagetitle %}
 {% block pagecontent %}
-    <article id="homepage" > {# class="overflow" #}
-    <div id="homepage-content" > {# class="container" #}
-        <!-- gallery stuff -->
-        <div class="gallery autoplay items-2" style="background:#d3e8f2; display:none">
-          <div id="item-1" class="control-operator"></div>
-          <div id="item-2" class="control-operator"></div>
-          <!-- <div id="item-3" class="control-operator"></div> -->
-
-          <figure class="item" style="background:#d3e8f2">
-            <!-- <h1>1</h1> -->
-                <!-- student icons stuff -->
-                <div id="focus1" class="focus-box">
-                    <a href="/browse">
-                    <div id="kijk">
-                    {# <img src="images/icons/iconmonstr-video-icon.png" width='128px' height='128px'> #}
-                    <img src="/images/icons/Oefen.png" width='230px' height='192px'>
-                    <h3>Oefen</h3>
-                    <p>Maak oefeningen en bekijk hulpvideo's.</p>
-                    </div>
-                    </a>
-                </div>
-                <div id="focus2" class="focus-box">
-                    <a href="/browse">
-                    <div id="leer">
-                    {# <img src="images/icons/iconmonstr-livejournal-icon.png" width='128px' height='128px'> #}
-                    <img src="/images/icons/Herhaal.png" width='230px' height='192px'>
-                    <h3>Herhaal</h3>
-                    <p>Oefen totdat je het onder die knie hebt.</p>
-                    </div>
-                    </a>
-                </div>
-                <div id="focus3" class="focus-box">
-                    <a href="/browse">
-                    <div id="groei">
-                    {# <img src="images/icons/iconmonstr-star-5-icon.png" width='128px' height='128px'> #}
-                    <img src="/images/icons/Groei.png" width='230px' height='192px'>
-                    <h3>Groei</h3>
-                    <p>Zie je voortgang en verdien punten.</p>
-                    </div>
-                    </a>
-                </div>
-                <!-- end student icons stuff -->
-          </figure>
-          <figure class="item" style="background:#d3e8f2">
-            <!-- <h1>2</h1> -->
-            <!-- teachers icons stuff -->
-                <div class="focus-box">
-                  <a href="/browse">
-                    <div id="kijk">
-                    {# <img src="images/icons/iconmonstr-video-icon.png" width='128px' height='128px'> #}
-                    <img src="/images/icons/volg.png" width='230px' height='192px'>
-                    <h3>Volg</h3>
-                    <p>Volg wat je leerlingen doen en zie hoever ze komen</p>
-                    </div>
-                  </a>
-                </div>
-                <div class="focus-box">
-                  <a href="/browse">
-                    <div id="leer">
-                    {# <img src="images/icons/iconmonstr-livejournal-icon.png" width='128px' height='128px'> #}
-                    <img src="/images/icons/leer.png" width='230px' height='192px'>
-                    <h3>Leer</h3>
-                    <p>Leer van de statistieken waar leerlingen moeite mee hebben</p>
-                    </div>
-                  </a>
-                </div>
-                <div class="focus-box">
-                  <a href="/browse">
-                    <div id="groei">
-                    {# <img src="images/icons/iconmonstr-star-5-icon.png" width='128px' height='128px'> #}
-                    <img src="/images/icons/Groei.png" width='230px' height='192px'>
-                    <h3>Verrijk</h3>
-                    <p>Geef meer aandacht aan  probleem gebieden en help je leerlingen om te groeien</p>
-                    </div>
-                  </a>
-                </div>
-                <!-- end teachers icons stuff -->
-          </figure>
-<!--           <figure class="item">
-            <h1>3</h1>
-          </figure> -->
-
-          <div class="controls">
-            <a href="#item-1" class="control-button">•</a>
-            <a href="#item-2" class="control-button">•</a>
-            <!-- <a href="#item-3" class="control-button">•</a> -->
-          </div>
-        </div>
-        <!-- end gallery stuff -->
-        <!-- Use jQuery instead og gallery-css -->
+    <article id="homepage" >
+    <div id="homepage-content" >
         <div id="slideshow">
             <div class="" style="background:#d3e8f2">
             <!-- <h1>1</h1> -->
@@ -127,7 +39,6 @@
                 <div class="focus-box">
                     <a href="/browse">
                     <div id="kijk">
-                    {# <img src="images/icons/iconmonstr-video-icon.png" width='128px' height='128px'> #}
                     <img src="/images/icons/Oefen.png" width='230px' height='192px'>
                     <h3>Oefen</h3>
                     <p>Maak oefeningen en bekijk hulpvideo's.</p>
@@ -137,7 +48,6 @@
                 <div class="focus-box">
                     <a href="/browse">
                     <div id="leer">
-                    {# <img src="images/icons/iconmonstr-livejournal-icon.png" width='128px' height='128px'> #}
                     <img src="/images/icons/Herhaal.png" width='230px' height='192px'>
                     <h3>Herhaal</h3>
                     <p>Oefen totdat je het onder die knie hebt.</p>
@@ -147,7 +57,6 @@
                 <div class="focus-box">
                     <a href="/browse">
                     <div id="groei">
-                    {# <img src="images/icons/iconmonstr-star-5-icon.png" width='128px' height='128px'> #}
                     <img src="/images/icons/Groei.png" width='230px' height='192px'>
                     <h3>Groei</h3>
                     <p>Zie je voortgang en verdien punten.</p>
@@ -162,7 +71,6 @@
                 <div class="focus-box">
                     <a href="/browse">
                     <div id="kijk">
-                    {# <img src="images/icons/iconmonstr-video-icon.png" width='128px' height='128px'> #}
                     <img src="/images/icons/volg.png" width='230px' height='192px'>
                     <h3>Volg</h3>
                     <p>Volg wat je leerlingen doen en zie hoever ze komen</p>
@@ -172,7 +80,6 @@
                 <div class="focus-box">
                     <a href="/browse">
                     <div id="leer">
-                    {# <img src="images/icons/iconmonstr-livejournal-icon.png" width='128px' height='128px'> #}
                     <img src="/images/icons/leer.png" width='230px' height='192px'>
                     <h3>Leer</h3>
                     <p>Leer van de statistieken waar leerlingen moeite mee hebben</p>
@@ -182,7 +89,6 @@
                 <div class="focus-box">
                     <a href="/browse">
                     <div id="groei">
-                    {# <img src="images/icons/iconmonstr-star-5-icon.png" width='128px' height='128px'> #}
                     <img src="/images/icons/Groei.png" width='230px' height='192px'>
                     <h3>Verrijk</h3>
                     <p>Geef meer aandacht aan  probleem gebieden en help je leerlingen om te groeien</p>
@@ -192,20 +98,18 @@
                 <!-- end teachers icons stuff -->
           </div> 
         </div>
-        <!-- end Use jQuery instead og gallery-css -->
-
-        <div class='homepage-sell overflow-white' style="font-size: 3em"> {# class="overflow" #}
+        <div class='homepage-sell overflow-white' style="font-size: 3em">
             Het digitale oefenboekje, speciaal geschreven voor jou.
         </div>
         <div class='homepage-video-blurb' style="padding: 60px 0px;">
             <div class="homepage-video" style="display: inline-block; width:600px; margin-right: 40px">
-                <!-- <iframe src=""></iframe> -->
-                <!-- <iframe width="560" height="315" src="http://www.youtube.com/embed/tC80BNOKJtk" frameborder="0" allowfullscreen></iframe> -->
-                <iframe width="600" height="360" src="http://www.youtube.com/embed/tC80BNOKJtk?feature=player_embedded" frameborder="0" allowfullscreen></iframe>
+                <iframe width="600" height="360" src="http://www.youtube.com/embed/tC80BNOKJtk?feature=player_embedded" frameborder="0" allowfullscreen>
+                </iframe>
             </div>
             <div class='open-source-blurb' style="display: inline-block; background:white; width: 395px;">
               <h4 style="color:orange; font-family:Ralewayl font-size: 1.4em">Khan Academie <strong>open source</strong></h4>
-              <p style="color:black; font-family:Raleway; letter-spacing: 1.2px; font-size: 0.8em">De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
+              <p style="color:black; font-family:Raleway; letter-spacing: 1.2px; font-size: 0.8em">
+                De Khan Academie is volledig open source. Dit betekent dat enige enthousiasteling kan meewerken aan dit platform.
                 Wij willen graag dat deze Nederlandse Khan Academie groeit met behulp van een community van programmeurs en leraren.
                 Hierdoor kan de Khan Academie gratis bkijven voortbestaan en wordt deze eigendom en ontwikkeled volgens de visie 
                 van de onderwijs community.</p>
