--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -1,13 +1,14 @@
 <footer id="footer">
   <div class="social-media-banner overflow overflow-orange" style="height:250px; width:1200px;margin:0 auto;text-align:center;padding-top:100px" >
     <a href="https://www.facebook.com/pages/Khan-Academie/123650984422563"><img src="/images/social-media-icons/facebook-256.png" height="128px" width="128px"></a>
+    <a href="http://twitter.com/khanacademie"><img src="/images/social-media-icons/twitter-256.png" height="128px" width="128px"></a>
+    <a href="https://plus.google.com/u/0/108155339552803678462/posts"><img src="/images/social-media-icons/googleplus-256.png" height="128px" width="128px"></a>
+
     <a href="https://github.com/PerceptumNL"><img src="/images/social-media-icons/github-256.png" height="128px" width="128px"></a>
     <!-- <a href="https://www.khanacademy.org/"><img src="/images/social-media-icons/khanacademy-256.png" height="128px" width="128px"></a> -->
     
-    <a href="http://twitter.com/khanacademie"><img src="/images/social-media-icons/twitter-256.png" height="128px" width="128px"></a>
     <a href="http://www.youtube.com/PerceptumNL"><img src="/images/social-media-icons/youtube-256.png" height="128px" width="128px"></a>
     <a href="http://www.linkedin.com/groups/Perceptum-4916670"><img src="/images/social-media-icons/linkedin-256.png" height="128px" width="128px"></a>
-    <a href="https://plus.google.com/u/0/108155339552803678462/posts"><img src="/images/social-media-icons/googleplus-256.png" height="128px" width="128px"></a>
 
   </div>
   <div class="footer-container">
@@ -15,64 +16,40 @@
       <div class="main-links">
         <ul>
           <li>Over Ons</li>
-          <li><a href="/about">Our mission</a></li>
+          <li><a href="/about">Onze Missie en Visie</a></li>
+          <li><a href="">How werkt het? (Handleiding) </a></li>
+          <li><a href="">Inloggen Leerling</a></li>
+          <li><a href="">Inloggen Coach</a></li>
           <li><a href="">Blog</a></li>
         </ul>
-        <ul>
+<!--         <ul>
           <li>Help</li>
           <li><a href="">FAQ</a></li>
           <li><a href="">Handleiding</a></li>
-        </ul>
+        </ul> -->
         <ul>
-          <li>Contribute</li>
+          <li>Community</li>
           <li><a href="">Wiki</a></li>
-          <li><a href="">Help mee</a></li>
-        </ul>
-        <ul>
-          <li>Contact</li>
-          <li><a href="">Contact us</a></li>
+          <li><a href="">Draag bij (help mee)</a></li>
+          <li><a href="">Blog</a></li>
           <li><a href="">Fouten Melden</a></li>
         </ul>
         <ul>
+          <li>Informatie</li>
+          <li><a href="">Blader door video's</a></li>
+          <li><a href="">Ondersteuning en training</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+        <ul>
           <li>Other</li>
-          <li><a href="">Gebruikersvoorwaarden</a></li>
-          <li><a href="">Privacybeleid</a></li>
+          <li><a href="/gebruiksvoorwaarden">Gebruikersvoorwaarden</a></li>
+          <li><a href="/privacybeleid">Privacybeleid</a></li>
         </ul>
       </div>
       <a class="footerlogo rollover span2" target="_blank" href="http://www.perceptum.nl"><img src="/images/perceptum_logo_pms_gray.png" rel="/images/perceptum_logo_pms.png" class="begin-button rollover"/></a> 
-{#       <span class=" row-fluid footer-links">
-        <a href="/reportissue?type=Defect&issue_labels={{ issue_labels|urlencode }}" 
-            id="report"
-            data-tag="Footer">Fouten melden</a>
-        <span class="sep">|</span>
-        <a href="https://docs.google.com/document/pub?id=1zr1Mv2W2lmqWRI_LAp0g2GWDM0duIoK38Y6NGwtBJ-c">Gebruiksvoorwaarden</a>
-        <span class="sep">|</span>
-        <a href="https://docs.google.com/document/pub?id=1kE2AEEdjqLPBI_sdiGCLhzkSXEsf3-5xaqY2bMmPmqo">Privacybeleid</a>
-        <span class="sep">|</span>
-        <a href="/about/contact">Contact</a>
-        <span class="sep">|</span>
-        <a href="/about/faq">FAQ</a>
-        <span class="sep">|</span>
-        <span class="small-social-links">
-          <a class="google-analytics-link-track youtube"
-             onclick="_gaq.push(['_trackEvent', 'Click', 'Youtube-Subscribe-Header']);"
-             href="http://www.youtube.com/PerceptumNL" target="_blank" title="Youtube"></a>
-          <a class="google-analytics-link-track twitter"
-             onclick="_gaq.push(['_trackEvent', 'Click', 'Twitter-Follow-Header']);"
-             href="http://twitter.com/khanacademie" title="Twitter"></a>
-          <a class="google-analytics-link-track facebook"
-             onclick="_gaq.push(['_trackEvent', 'Click', 'Facebook-Join-Header']);"
-             href="https://www.facebook.com/pages/Khan-Academie/123650984422563" title="Facebook"></a>
-        </span>
-      </span> #}
+
     </div>
-    <div class="social-media" style="display:none">
-      <a href="https://www.facebook.com/pages/Khan-Academie/123650984422563"><img src="/images/WDD_Buddycon_Icons/PNG/circular/facebook_32.png"></a>
-      <a href="https://twitter.com/KhanAcademie"><img src="/images/WDD_Buddycon_Icons/PNG/circular/twitter_32.png"></a>
-      <a href="http://www.youtube.com/PerceptumNL"><img src="/images/WDD_Buddycon_Icons/PNG/circular/youtube_32.png"></a>
-      <a href="http://www.linkedin.com/groups/Perceptum-4916670"><img src="/images/WDD_Buddycon_Icons/PNG/circular/linkedin_32.png"></a>
-      <a href="http://www.perceptum.nl/"><img src="/images/WDD_Buddycon_Icons/PNG/circular/wordpress_32.png"></a>
-    </div>
+
     <div class="inner">
       <div id="copyright" class="tiny" title="Version: {{ App.version|escape }}">
         <small>
@@ -85,55 +62,4 @@
   </div>
 </footer>
 
-<div style="display:none" id="footer" class="short">
-<footer>
-    <div class="footer">
-      <div class="container narrow row-fluid">  
-        <a class="footerlogo rollover span2" target="_blank" href="http://www.perceptum.nl"><img src="/images/perceptum_logo_pms_gray.png" rel="/images/perceptum_logo_pms.png" class="begin-button rollover"/></a>          
-        <div id="leaves span10">
-            <span class="footer-links">
-                {% if not user_data or not user_data.is_child_account() %}
-                    <a href="/reportissue?type=Defect&issue_labels={{ issue_labels|urlencode }}" id="report"
-                       data-tag="Footer">Fouten melden</a>
-                    <span class="sep">|</span>
-                    <a href="https://docs.google.com/document/pub?id=1zr1Mv2W2lmqWRI_LAp0g2GWDM0duIoK38Y6NGwtBJ-c">Gebruiksvoorwaarden</a>
-                    <span class="sep">|</span>
-                    <a href="https://docs.google.com/document/pub?id=1kE2AEEdjqLPBI_sdiGCLhzkSXEsf3-5xaqY2bMmPmqo">Privacybeleid</a>
-                {% endif %}
-                {% if is_mobile_capable %}
-                    <span class="sep">|</span>
-                    <a href="{% if user_data.is_demo %}/logout?continue={% endif %}/mobilesite"
-                       {% if user_data.is_demo %}class="show-demo-dialog"{% endif %}>Mobile Site</a>
-                {% endif %}
-                <span class="sep">|</span>
-                    <a href="/about/contact">Contact</a>
-                <span class="sep">|</span>
-            <a href="/about/faq">FAQ</a>
-                <span class="sep">|</span>
-                <span class="small-social-links">
-                    <a class="google-analytics-link-track youtube"
-                       onclick="_gaq.push(['_trackEvent', 'Click', 'Youtube-Subscribe-Header']);"
-                       href="http://www.youtube.com/PerceptumNL" target="_blank" title="Youtube"></a>
-                    <a class="google-analytics-link-track twitter"
-                       onclick="_gaq.push(['_trackEvent', 'Click', 'Twitter-Follow-Header']);"
-                       href="http://twitter.com/khanacademie" title="Twitter"></a>
-                    <a class="google-analytics-link-track facebook"
-                       onclick="_gaq.push(['_trackEvent', 'Click', 'Facebook-Join-Header']);"
-                       href="https://www.facebook.com/pages/Khan-Academie/123650984422563" title="Facebook"></a>
-                </span>
-            </span>
-
-            <div class="inner">
-                <div id="copyright" class="tiny" title="Version: {{ App.version|escape }}">
-                    <small>
-                        &#0169;2013 Khan Academie, originele Engelse content door Khan Academy&#0153;
-                    </small>
-                    <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"
-                       id="creative-commons-link"></a>
-                </div>
-            </div>
-        </div>
-      </div>  
-    </div>
-</footer>
 </div>
