--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -103,7 +103,7 @@
         </div>
         <div class='homepage-video-blurb' style="padding: 60px 0px;">
             <div class="homepage-video" style="display: inline-block; width:600px; margin-right: 40px">
-                <iframe width="600" height="360" src="http://www.youtube.com/embed/tC80BNOKJtk?feature=player_embedded" frameborder="0" allowfullscreen>
+                <iframe width="600" height="360" src="http://www.youtube.com/embed/ewsvvVtVfmo" frameborder="0" allowfullscreen></iframe>
                 </iframe>
             </div>
             <div class='open-source-blurb' style="display: inline-block; background:white; width: 395px;">
