--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -29,16 +29,17 @@
         </ul> -->
         <ul>
           <li>Community</li>
-          <li><a href="">Wiki</a></li>
-          <li><a href="">Draag bij (help mee)</a></li>
-          <li><a href="">Blog</a></li>
-          <li><a href="">Fouten Melden</a></li>
+          <li><a href="http://wiki.khanacademie.nl/">Wiki</a></li>
+          <li><a href="/helpmee">Draag bij</a></li>
+          <li><a href="http://blog.khanacademie.nl/">Blog</a></li>
+          <li><a href="http://www.khanacademie.nl/reportissue?type=Defect&issue_labels=">Fouten Melden</a></li>
         </ul>
         <ul>
           <li>Informatie</li>
-          <li><a href="">Blader door video's</a></li>
-          <li><a href="">Ondersteuning en training</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="/browse">Blader door video's</a></li>
+          <li><a href="/partners">Partnerschap en Pilots</a></li>
+          <li><a href="/training">Training en Ondersteuning </a></li>
+          <li><a href="/about/contact">Contact</a></li>
         </ul>
         <ul>
           <li>Other</li>
@@ -53,7 +54,7 @@
     <div class="inner">
       <div id="copyright" class="tiny" title="Version: {{ App.version|escape }}">
         <small>
-            &#0169;2013 Khan Academie, originele Engelse content door Khan Academy&#0153;
+            &#0169;2013 Khan Academie, Khan Academie is geïnspireerd door, maar volledig onafhankelijk van de Khan Academy.&#0153;
         </small>
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"
            id="creative-commons-link"></a>
