testing adding packages

--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -47,8 +47,9 @@
           <li><a href="/privacybeleid">Privacybeleid</a></li>
         </ul>
       </div>
-      <a class="footerlogo rollover span2" target="_blank" href="http://www.perceptum.nl"><img src="/images/perceptum_logo_pms_gray.png" rel="/images/perceptum_logo_pms.png" class="begin-button rollover"/></a> 
-
+      <!-- REMOVE LOGO? -->
+      <!-- <a class="footerlogo rollover span2" target="_blank" href="http://www.perceptum.nl"><img src="/images/perceptum_logo_pms_gray.png" rel="/images/perceptum_logo_pms.png" class="begin-button rollover"/></a> 
+ -->
     </div>
 
     <div class="inner">
