--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -17,10 +17,10 @@
         <ul>
           <li>Over Ons</li>
           <li><a href="/about">Onze Missie en Visie</a></li>
-          <li><a href="">How werkt het? (Handleiding) </a></li>
-          <li><a href="">Inloggen Leerling</a></li>
-          <li><a href="">Inloggen Coach</a></li>
-          <li><a href="">Blog</a></li>
+          <li><a href="/voorleraren">Hoe werkt het?</a></li>
+          <li><a href="/login?continue=%2Fpostlogin&direct=1">Inloggen Leerling</a></li>
+          <li><a href="/login?continue=http%3A//www.khanacademie.nl/class_profile">Inloggen Coach</a></li>
+          <!-- <li><a href="http://blog.khanacademie.nl">Blog</a></li> -->
         </ul>
 <!--         <ul>
           <li>Help</li>
